variation_study/qwen2.5-coder_temp0.7/run1/helm_002.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-a
spec:
  replicas: 3
  selector:
    matchLabels:
      app: microservice-a
  template:
    metadata:
      labels:
        app: microservice-a
    spec:
      serviceAccountName: microservices-stack-service-account
      containers:
      - name: microservice-a
        image: my-microservice-a-image:latest
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-b
spec:
  replicas: 3
  selector:
    matchLabels:
      app: microservice-b
  template:
    metadata:
      labels:
        app: microservice-b
    spec:
      serviceAccountName: microservices-stack-service-account
      containers:
      - name: microservice-b
        image: my-microservice-b-image:latest
        ports:
        - containerPort: 8081
